[package]
name = "auria-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auria-core/auria-runtime"
authors = ["AURIA Team <auria@dust.llc>"]
description = "AURIA Runtime Core - Foundational types and data structures"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
async-trait = "0.1"
bytes = "1.5"
parking_lot = "0.12"
hex = "0.4"
